css/styles.css
/*** Variables ***/
/* @import url('formspree.css'); */

:root {
    --spacing: 0.5em;
    --dor-green: #8dc63f;
    --dor-bronze: #a9846f;
    --dor-darkgrey: #1c1c1c;
    --dor-black: #121212;
    --color-bg1: var(--dor-black);
    --color-bg2: var(--dor-darkgrey);
    --color-fg: var(--dor-bronze);
    --color-accent: var(--dor-green);
    
    --font-family-site: "Raleway", sans-serif;
    --font-weight-body: 400;
    --font-weight-subheader: 600;
    --font-weight-header: 700;
    
    --transition-duration: 0.15s;
    --nav-main-height: calc(var(--nav-main-item-height) + calc(var(--spacing)*4));
    --nav-main-item-height: 2em;
    --nav-main-width: 70vw;

    /* OLD STUFF */
    /* --color-accent: #ffb633; */
    /* --color-accent: #cf6520; */
    /* --color-accent-secondary: #07b8b1; */
    /* --color-accent-secondary: #0DAB76; */
    /* --color-bg: #121212; */
    /* --color-fg: #917c5d; /* #eee; */
    /* --color-grey: #222; */
    /* --color-grey-alpha-80: rgb(from var(--color-grey) r g b / 0.8); */
    /* --font-heading: 'IM Fell English SC'; */
    /* --font-heading: 'Jura'; */

}

/*** Reset/Normalize ***/

blockquote,
body,
dd,
dl,
h1,
h2,
h3,
h4,
h5,
h6,
fieldset,
figure,
ol,
p,
pre,
ul
{
    margin: 0;
}

button,
dialog,
fieldset,
input,
legend,
ol,
ul
{
    padding: 0;
}

ol,
ul
{
    list-style: none;
}

table
{
    border-collapse: collapse;
}

a
{
    color: inherit;
}

a,
abbr
{
    text-decoration: none;
}

button,
dialog,
input
{
    background: none;
}

input:-webkit-autofill
{
    transition: background;
    transition-delay: 3600000s;
}

button
{
    cursor: pointer;
}

button,
input,
select,
textarea
{
    box-sizing: border-box;
    font: inherit;
}

button,
dialog,
iframe,
input,
img,
fieldset,
progress,
select,
textarea
{
    border: none;
}

button::-moz-focus-inner,
input[type="button"]::-moz-focus-inner,
input[type="color"]::-moz-focus-inner,
input[type="reset"]::-moz-focus-inner,
input[type="submit"]::-moz-focus-inner
{
    border: none;
}

input[type="search"],
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration
{
    -webkit-appearance: none;
}

[contenteditable]:focus,
a:focus,
button:focus,
input:focus,
select:focus,
textarea:focus
{
    outline: none;
}

input::placeholder,
textarea::placeholder
{
    color: inherit;
}

input:invalid,
select:invalid,
textarea:invalid
{
    box-shadow: none;
}

button[disabled],
input[disabled]
{
    pointer-events: none;
}

audio,
img,
video
{
    max-width: 100%;
}

/*** Animations ***/

@keyframes fade-in {
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes fade-out {
    to {
        opacity: 0;
        transform: translateY(-20vh);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .has-animation-fade-in {
        animation-fill-mode: forwards;
        animation-name: fade-in;
        animation-range-start: entry;
        animation-range-end: cover 50%;
        animation-timeline: view();
        opacity: 0;
        transform: translateY(-20vh);
    }

    .has-animation-fade-out {
        animation-fill-mode: forwards;
        animation-name: fade-out;
        animation-range-start: exit -30vh;
        animation-range-end: cover 100%;
        animation-timeline: view();
        opacity: 1;
        transform: translateY(0);
    }
}

/*** Globals ***/

html {
    @media ( prefers-reduced-motion: no-preference ) {
        scroll-behavior: smooth;
    }
}

body {
    background: var(--color-bg1);
    color: var(--color-fg);
    font-family: var(--font-family-site);
    font-variant-numeric: lining-nums;
    font-size: clamp(1rem, -0.875rem + 3vw, 1.25rem);
    line-height: 1.5;
}

a {
    text-decoration: underline;
    text-underline-offset: 0.25em;
    transition: color var(--transition-duration);

    &:hover {
        color: var(--color-accent);
    }

    & .sm-icon  {
        width: 36px;
        height: 36px;
        text-decoration: none;
    }
}

.icon-svg {
    fill: currentColor;
    height: 2em;
    transition: color var(--transition-duration);
    width: 2em;
}

.link-to-top {
    align-items: center;
    background: var(--color-accent);
    border-radius: 50%;
    bottom: 1em;
    color: var(--color-bg1);
    display: flex;
    justify-content: center;
    opacity: 0;
    padding: 0.25em;
    position: fixed;
    right: 1em;
    text-decoration: none;
    transform: translateY(100%);
    transition: opacity var(--transition-duration), transform var(--transition-duration);
    visibility: hidden;
    z-index: 999;

    &.is-active {
        opacity: 1;
        transform: translateY(0);
        visibility: visible;
    }

    &:hover {
        background: rgb(from var(--color-bg1) r g b / 50%);
        
        & .icon-svg {
            color: var(--color-accent);
        }
    }

    & svg {
        transform: translateY(-0.1em);
    }
}

.separator {
    display: flex;
    justify-content: center;
    margin-block: 3em 2em;

    & svg {
        color: var(--color-accent);
        fill: currentColor;
        font-size: 3em;
        height: 1em;
        opacity: 0.5;
        transform: rotate(90deg);
        width: 1em;
    }
}

.box-anchor {
    transform: translateY(-5em);
}

.mb-1 {
    margin-bottom: var(--spacing);
}

.mb-2 {
    margin-bottom: calc(2*var(--spacing));
}

.mb-3 {
    margin-bottom: calc(3*var(--spacing));
}
/* ... */

